Fix swatch text overflow

--- a/src/components/swatch/swatch.scss
+++ b/src/components/swatch/swatch.scss
@@ -4,6 +4,9 @@
   justify-content: center;
   width: 128px;
   height: 64px;
+  padding: 8px;
+  word-break: break-all;
   border-radius: 4px;
   font-family: 'Consolas', 'Monaco', Courier, monospace;
+  text-align: center;
 }
